--- a/readme.ipynb
+++ b/readme.ipynb
@@ -15,7 +15,7 @@
     "### 1) Download dataset\n",
     "\n",
     "* Download [Caltech-101](http://www.vision.caltech.edu/Image_Datasets/Caltech101/101_ObjectCategories.tar.gz)\n",
-    "* Download [google-things](http://www.robots.ox.ac.uk/~vgg/data/background_google/google_things.tar) : This dataset will be used as the negative images\n",
+    "* Download [houses](http://www.robots.ox.ac.uk/~vgg/data/houses/houses.tar) : This dataset will be used as the negative images\n",
     "\n",
     "### 2) Extract dataset files\n",
     "\n",
@@ -48,81 +48,33 @@
    "source": [
     "### 4) Run the main driver\n",
     "\n",
-    "Run \"main.py\". It will build object-detector with the following 7-steps\n",
+    "Run \"main.py\". It will automatically build object-detector with the 7-step framework.\n",
     "\n",
-    "#### [Step 1] Getting average size of the target object.\n",
+    "#### 4.1) Displayed Test Image\n",
     "\n",
-    "```\n",
-    "[Step 1] Getting average size of the target object.\n",
-    "            You can set or edit your detector's window size referring this result.\n",
-    "            config_file.json[\"detector\"][\"window_dim\"]\n",
-    "            [INFO] current setting is [32, 96]\n",
-    "```\n",
+    "After finishing step 6, you can see the following test image and recognized bounding box.\n",
+    "<img src=\"examples/car_side.png\"> \n",
     "\n",
-    "#### [Step 2] Extracting features.\n",
+    "In the case of using **faces.conf** we can see the following test image and recognized bounding box.\n",
+    "<img src=\"examples/faces.png\">\n",
     "\n",
-    "```\n",
-    "[Step 2] Extracting features\n",
-    "[FeatureGetter INFO] Positive samples: 122, Negative samples: 1300, Hard Negative Mined samples: 0\n",
-    "[FeatureGetter INFO] Feature Dimension: 5796\n",
-    "```\n",
+    "#### 4.2) Average-Precision Evaluation\n",
     "\n",
-    "#### [Step 3] Training classifier\n",
+    "AP(Average Precision) is a measure of evaluating object detector. After finishing step 7, object detector's average precision score will be printed like this\n",
     "\n",
     "```\n",
-    "[Step 3] Training classifier. (Note: It can be time-consuming task)\n",
-    "[INFO] Training result is as follows\n",
-    "             precision    recall  f1-score   support\n",
-    "\n",
-    "        0.0       1.00      1.00      1.00      1300\n",
-    "        1.0       1.00      0.97      0.98       122\n",
-    "\n",
-    "avg / total       1.00      1.00      1.00      1422\n",
+    "Average Precision : 0.937441470843\n",
     "```\n",
     "\n",
-    "#### [Step 4] Gathering Hard Negative Samples.\n",
+    "It is also displayed [precision-recall curve](https://en.wikipedia.org/wiki/Precision_and_recall).\n",
     "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "#### [Step 5] Re-training classifier including hard-negative-mined samples.\n",
-    "\n",
-    "```\n",
-    "\n",
-    "```\n",
-    "\n",
-    "#### [Step 6] Running detector.\n",
-    "\n",
-    "\n",
-    "\n",
-    "#### [Step 7] Evaluate detector using average-precision metric.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "<img src=\"examples/precision-recall.png\">\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "run ./5_run.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
