bugfix : dataset name

--- a/readme.ipynb
+++ b/readme.ipynb
@@ -28,7 +28,7 @@
     "        |--- [caltech101]\n",
     "                |--- [101_ObjectCategories]\n",
     "                |--- [Annotations]\n",
-    "        |--- [google_things]\n",
+    "        |--- [houses]\n",
     "```\n",
     "\n",
     "### 3) Confirm the path of the dataset\n",
@@ -71,11 +71,6 @@
     "<img src=\"examples/precision-recall.png\">\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
